js/js.translator/testData/incremental/invalidation/jsModuleAnnotationOnObjectWithUsage/lib1/ObjectB.1.kt
@JsNonModule
@JsModule("../third-party-lib.mjs")
external object ObjectB {
    fun getResult(): String
}
